@@ -1156,4 +1156,11 @@ public class HtmlParserTest {
       Document doc = Jsoup.parse("<!");
       assertTrue(doc.childNode(0) instanceof Comment);
   }
+
+  @Test public void preSkipsFirstNewline() {
+        Document doc = Jsoup.parse("<pre>\n\nOne\nTwo\n</pre>");
+        Element pre = doc.selectFirst("pre");
+        assertEquals("One\nTwo", pre.text());
+        assertEquals("\nOne\nTwo\n", pre.wholeText());
+  }
 }
