@@ -9,6 +9,9 @@ jsoup changelog
   * Improvement: added support for Deflate encoding.
     <https://github.com/jhy/jsoup/pull/982>
 
+  * Improvement: when parsing <pre> tags, skip the first newline if present.
+    <https://github.com/jhy/jsoup/issues/825>
+
   * Bugfix: The Element.text() for <div>One</div>Two was "OneTwo", not "One Two".
     <https://github.com/jhy/jsoup/issues/812>
 
